# poisson-ticker

./: Cargo.toml  README.md  README.tpl
examples/: distr.rs
src/: histogram.rs  lib.rs  requests.rs  summary_stats.rs
