[package]
name = "poisson-ticker"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false }
async-timer = { version = "0.7", features = ["stream", "tokio_on"] }
rand = "0.7"
rand_distr = "0.2"

[dev-dependencies]
tokio = {version = "0.2.11", features = ["macros"]}
