[package]
name = "poisson-ticker"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

description = "Ticker with poisson arrivals." 
readme = "README.md"
documentation = "https://docs.rs/poisson-ticker"
homepage = "https://github.com/akshayknarayan/poisson-ticker"
repository = "https://github.com/akshayknarayan/poisson-ticker.git"

keywords = ["time", "ticker"]
categories = []

license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
futures-util = { version = "0.3", default-features = false }
async-timer = { version = "0.7", features = ["stream", "tokio_on"] }
rand = "0.7"
rand_distr = "0.2"
tracing = "0.1"
tokio = {version = "0.2", features = ["rt-core"]}

[dev-dependencies]
tokio = {version = "0.2", features = ["macros"]}
